--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Styles/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/styles.css">
     <title>Responsive Design</title>
 </head>
 
 <body>
-    <header></header>
+  <header>
+    <div class="topnav">
+      <div class="logo_1">
+        <a class="logo" href="#Head">Head.</a>
+      </div>
+      <div class="navbar_1">
+        <a class="navbar" href="#Works">Works</a>
+        <a class="navbar" href="#Services">Services</a>
+        <a class="navbar" href="#Contacts">Contacts</a>
+      </div>
+    </div>
+  </header>
+  
+  <h1>Patagonia</h1>
+  <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
+  <div class="img_container">
+    <img src="/Images/Bitmaphorses (2).png" alt="patagonian horses">
+  </div>
 
-aloooo
-    <footer></footer>
+  <footer></footer>
  
 </body>
 </html>
